--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "pranitdev",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "MY blog website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
   "dependencies": {
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
@@ -34,16 +30,9 @@
   "devDependencies": {
     "prettier": "2.1.2"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
-  "keywords": [
-    "gatsby"
-  ],
   "license": "0BSD",
   "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
-  },
+ 
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -51,6 +40,6 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> \" && exit 1"
   }
 }
